fix: Adjust header and menu spacing

--- a/assets/sass/single.scss
+++ b/assets/sass/single.scss
@@ -10,7 +10,7 @@ div.container {
   max-width: shared.$max-width;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: 28px auto;
+  grid-template-rows: 64px auto;
   gap: 32px;
 
   @include shared.break('tablet') {
@@ -42,7 +42,7 @@ div.container {
 
   div.site-menu {
     grid-column: 10 / 13;
-    grid-row: 1 / 3;
+    grid-row: 2 / 3;
 
     @include shared.break('tablet') {
       margin: 32px 0 0;
